// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a product title renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3150A2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  line-height: 2.2rem;
  text-align: center;
  line-height: 2.2rem;
}

.emotion-2 {
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.5rem;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.emotion-4 {
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.5rem;
  color: #5971B4;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 12px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  line-height: 1.4;
  text-transform: uppercase;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
  margin-top: 3px;
}

@media screen and (min-width:1200px) {
  .emotion-6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<body>
    <div>
      <header
        class="emotion-0 emotion-1"
        data-test-id="ProductTitle"
      >
        <h2
          class="emotion-2 emotion-3"
        >
          Women Lucia, Viola
        </h2>
        <h3
          class="emotion-4 emotion-5"
        >
          Mott50 x Margherita Missoni
        </h3>
        <div
          class="emotion-6 emotion-7"
          data-test-id="Price"
        >
          $175.00
        </div>
      </header>
    </div>
  </body>,
  "container": .emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3150A2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  line-height: 2.2rem;
  text-align: center;
  line-height: 2.2rem;
}

.emotion-2 {
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.5rem;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.emotion-4 {
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.5rem;
  color: #5971B4;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 12px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  line-height: 1.4;
  text-transform: uppercase;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
  margin-top: 3px;
}

@media screen and (min-width:1200px) {
  .emotion-6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div>
    <header
      class="emotion-0 emotion-1"
      data-test-id="ProductTitle"
    >
      <h2
        class="emotion-2 emotion-3"
      >
        Women Lucia, Viola
      </h2>
      <h3
        class="emotion-4 emotion-5"
      >
        Mott50 x Margherita Missoni
      </h3>
      <div
        class="emotion-6 emotion-7"
        data-test-id="Price"
      >
        $175.00
      </div>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`a sale product title renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3150A2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  line-height: 2.2rem;
  text-align: center;
  line-height: 2.2rem;
}

.emotion-2 {
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.5rem;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.emotion-4 {
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.5rem;
  color: #5971B4;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 12px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  line-height: 1.4;
  text-transform: uppercase;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
  margin-top: 3px;
}

@media screen and (min-width:1200px) {
  .emotion-6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<body>
    <div>
      <header
        class="emotion-0 emotion-1"
        data-test-id="ProductTitle"
      >
        <h2
          class="emotion-2 emotion-3"
        >
          Women's Aisha Nightie, Blue
        </h2>
        <h3
          class="emotion-4 emotion-5"
        >
          Mia + Finn
        </h3>
        <div
          class="emotion-6 emotion-7"
          data-test-id="Price"
        >
          <span
            class="emotion-8 emotion-9"
          >
            $32.50 - $54.00
          </span>
        </div>
      </header>
    </div>
  </body>,
  "container": .emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3150A2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  line-height: 2.2rem;
  text-align: center;
  line-height: 2.2rem;
}

.emotion-2 {
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.5rem;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.emotion-4 {
  font-family: GT Walsheim Web,Helvetica,Trebuchet MS,sans-serif;
  font-size: 1.5rem;
  color: #5971B4;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 12px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  line-height: 1.4;
  text-transform: uppercase;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
  margin-top: 3px;
}

@media screen and (min-width:1200px) {
  .emotion-6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div>
    <header
      class="emotion-0 emotion-1"
      data-test-id="ProductTitle"
    >
      <h2
        class="emotion-2 emotion-3"
      >
        Women's Aisha Nightie, Blue
      </h2>
      <h3
        class="emotion-4 emotion-5"
      >
        Mia + Finn
      </h3>
      <div
        class="emotion-6 emotion-7"
        data-test-id="Price"
      >
        <span
          class="emotion-8 emotion-9"
        >
          $32.50 - $54.00
        </span>
      </div>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
